syntax = "proto3";

package pollen_provider.v1;

import "google/protobuf/timestamp.proto";

// Each service's buf.gen.yaml overrides this to its own internal/gen path.
option go_package = "pollen_provider/v1";

service PollenService {
  rpc GetAllPollenReports(GetAllPollenReportsRequest) returns (GetAllPollenReportsResponse);
  rpc GetPollenReport(GetPollenReportRequest) returns (GetPollenReportResponse);
}

message PollenReport {
  string location_id = 1;
  google.protobuf.Timestamp collected_at = 2;

  // Overall summary (computed by collector at write time).
  // Represents the highest UPI across the 3 pollen types.
  int32 overall_index = 3;
  string overall_category = 4;
  string dominant_type = 5;

  repeated PollenType types = 6;
  repeated PollenPlant plants = 7;
}

message PollenType {
  string code = 1;
  int32 index = 2;
  string category = 3;
  bool in_season = 4;
}
message PollenPlant {
  string code = 1;
  string display_name = 2;
  int32 index = 3;
  string category = 4;
  bool in_season = 5;
}

message GetAllPollenReportsRequest {}

message GetAllPollenReportsResponse {
  repeated PollenReport reports = 1;
}

message GetPollenReportRequest {
  string location_id = 1;
}

message GetPollenReportResponse {
  PollenReport report = 1;
}