syntax = "proto3";

package weather_provider.v1;

import "google/protobuf/timestamp.proto";

// Each service's buf.gen.yaml overrides this to its own internal/gen path.
option go_package = "weather_provider/v1";

service PressureStatsService {
  rpc GetAllPressureStats(GetAllPressureStatsRequest) returns (GetAllPressureStatsResponse);
  rpc GetPressureStats(GetPressureStatsRequest) returns (GetPressureStatsResponse);
}

message PressureStat {
  string location_id = 1;
  google.protobuf.Timestamp last_updated = 2;
  double delta_1h = 3;
  double delta_3h = 4;
  double delta_6h = 5;
  double delta_12h = 6;
  double delta_24h = 7;
  string trend = 8;
}

message GetAllPressureStatsRequest {}

message GetAllPressureStatsResponse {
  repeated PressureStat stats = 1;
}

message GetPressureStatsRequest {
  string location_id = 1;
}

message GetPressureStatsResponse {
  PressureStat stat = 1;
}

